--- a/assets/minecraft/lang/zh_CN.json
+++ b/assets/minecraft/lang/zh_CN.json
@@ -11,6 +11,7 @@
   "item.minecraft.squid_spawn_egg": "生成squid233",
   "item.minecraft.iron_pickaxe": "ff98sha",
   "item.minecraft.netherite_pickaxe": "黑化的ff98sha",
+  "item.minecraft.turtle_helmet": "奇怪的帽子",
   "block.minecraft.tube_coral_block": "管状的Minecraft.Wnxi",
   "block.minecraft.brain_coral_block": "脑纹状的Minecraft.Wnxi",
   "block.minecraft.bubble_coral_block": "带气泡的Minecraft.Wnxi",
