--- a/assets/minecraft/lang/zh_CN.json
+++ b/assets/minecraft/lang/zh_CN.json
@@ -24,5 +24,6 @@
   "block.minecraft.dead_horn_coral_block": "去世的带鹿角Minecraft.Wnxi",
   "item.minecraft.experience_bottle": "Mr.时间之瓶",
   "block.minecraft.birch_planks": "发光的木板",
-  "block.minecraft.warped_planks": "诡异的发光的木板"
+  "block.minecraft.warped_planks": "诡异的发光的木板",
+  "block.minecraft.tnt": "AlabTNT"
 }
