--- a/assets/minecraft/lang/zh_CN.json
+++ b/assets/minecraft/lang/zh_CN.json
@@ -23,6 +23,9 @@
   "block.minecraft.dead_fire_coral_block": "去世的带火Minecraft.Wnxi",
   "block.minecraft.dead_horn_coral_block": "去世的带鹿角Minecraft.Wnxi",
   "item.minecraft.experience_bottle": "Mr.时间之瓶",
+  "item.minecraft.golden_helmet": "混乱帽",
+  "item.minecraft.red_dye": "满江红",
+  "item.minecraft.enchanted_book": "覆膜书",
   "block.minecraft.birch_planks": "发光的木板",
   "block.minecraft.warped_planks": "诡异的发光的木板",
   "block.minecraft.tnt": "AlabTNT"
