--- a/assets/minecraft/lang/zh_CN.json
+++ b/assets/minecraft/lang/zh_CN.json
@@ -9,8 +9,10 @@
   "item.minecraft.creeper_spawn_egg": "生成JJ怪大战",
   "item.minecraft.mooshroom_spawn_egg": "生成阿秋Minecraft",
   "item.minecraft.squid_spawn_egg": "生成squid233",
+  "item.minecraft.enderman_spawn_egg": "生成Ender56",
+  "item.minecraft.mooshroom_spawn_egg": "生成阿秋Minecraft",
   "item.minecraft.iron_pickaxe": "ff98sha",
-  "item.minecraft.netherite_pickaxe": "黑化的ff98sha",
+  "item.minecraft.netherite_pickaxe": "高级的黑化ff98sha",
   "item.minecraft.turtle_helmet": "奇怪的帽子",
   "block.minecraft.tube_coral_block": "管状的Minecraft.Wnxi",
   "block.minecraft.brain_coral_block": "脑纹状的Minecraft.Wnxi",
@@ -25,8 +27,51 @@
   "item.minecraft.experience_bottle": "Mr.时间之瓶",
   "item.minecraft.golden_helmet": "混乱帽",
   "item.minecraft.red_dye": "满江红",
-  "item.minecraft.enchanted_book": "覆膜书",
   "block.minecraft.birch_planks": "发光的木板",
   "block.minecraft.warped_planks": "诡异的发光的木板",
-  "block.minecraft.tnt": "AlabTNT"
+  "block.minecraft.tnt": "AlabTNT",
+  "block.minecraft.water": "mohui666",
+  "entity.minecraft.creeper": "JJ怪大战",
+  "entity.minecraft.squid": "squid233",
+  "entity.minecraft.drowned": "Drowned64",
+  "entity.minecraft.sheep": "SHEEP_REALMS",
+  "entity.minecraft.cat": "skyliye",
+  "entity.minecraft.pig": "yellowpiggy",
+  "entity.minecraft.mooshroom": "阿秋Minecraft",
+  "entity.minecraft.enderman": "Ender56",
+  "entity.minecraft.tnt": "点燃的AlabTNT",
+  "entity.minecraft.tnt_minecart": "装着AlabTNT的矿车",
+  "selectWorld.newWorld": "新的茶馆",
+  "selectWorld.data_read": "读取茶馆数据...",
+  "createWorld.customize.preset.water_world": "氵世界",
+  "createWorld.customize.custom.useWaterLakes": "氵湖",
+  "createWorld.customize.custom.waterLakeChance": "罕见氵湖",
+  "gameMode.creative": "上帝模式",
+  "gameMode.hardcore": "困难模式",
+  "gameMode.survival": "普通模式",
+  "selectWorld.gameMode.creative": "上帝模式",
+  "selectWorld.gameMode.creative.line1": "无限的金粒，绿宝石还有人气！",
+  "selectWorld.gameMode.creative.line2": "还可以自由滥权！",
+  "selectWorld.gameMode.hardcore": "困难模式",
+  "selectWorld.gameMode.hardcore.line1": "像普通模式，但是很难，而且",
+  "selectWorld.gameMode.hardcore.line2": "如果被封禁了就永远不能回来了",
+  "multiplayer.player.joined": "%s 来到了茶馆，应该是来氵帖的。",
+  "multiplayer.player.joined.renamed": "%s (以前叫 %s) 来到了茶馆。",
+  "multiplayer.player.left": "%s 离开了茶馆，是被封禁了还是怎么了？",
+  "multiplayer.disconnect.banned.reason": "你被版主封禁了！\n原因: %s",
+  "multiplayer.disconnect.banned_ip.reason": "你的IP被版主封禁了！\n原因: %s",
+  "multiplayer.disconnect.flying": "你不能滥权！因为你没有权限。",
+  "multiplayer.disconnect.server_full": "这个茶馆似乎很受欢迎！稍后再来吧！",
+  "title.oldgl.eol.line1": "你的显卡弱爆了！因此不受支持！",
+  "title.oldgl.eol.line2": "Minecraft: MCBBS Edition 需要 OpenGL 3.2，但是你的电脑太过于lj！",
+  "title.oldgl.deprecation.line1": "我们检测到你的显卡弱爆了！所以你的显卡可能不支持",
+  "title.oldgl.deprecation.line2": "OpenGL 3.2，因此游戏可能会出现显示问题。",
+  "key.categories.creative": "上帝模式",
+  "pack.incompatible.old": "(适用于更lj的旧版Minecraft)",
+  "pack.incompatible.new": "(适用于更NB的新版Minecraft)",
+  "pack.incompatible.confirm.title": "你想要加载这个玩意吗？",
+  "pack.incompatible.confirm.old": "这个包是给更lj的旧版Minecraft制作的，在这个版本上可能不能正常运行。",
+  "pack.incompatible.confirm.new": "这个包是给更NB的旧版Minecraft制作的，在这个版本上可能不能正常运行。",
+  "death.attack.drown": "%1$s 被氵淹没，不知所措。",
+  "death.attack.explosion": "%1$s 被炸死了，不知道是不是被AlabTNT炸死的。",
 }
