--- a/assets/minecraft/lang/zh_mcbbs.json
+++ b/assets/minecraft/lang/zh_mcbbs.json
@@ -3318,7 +3318,7 @@
     "menu.loadingForcedChunks": "\u52a0\u8f7d%s\u7ef4\u5ea6\u4e2d\u7684\u5f3a\u5236\u52a0\u8f7d\u533a\u5757\u4e2d",
     "menu.loadingLevel": "\u52a0\u8f7d\u4e16\u754c\u4e2d",
     "menu.modded": "\uff08\u5df2\u4fee\u6539\uff09",
-    "menu.multiplayer": "\u591a\u4eba\u6e38\u620f",
+    "menu.multiplayer": "\u591a\u4eba\u6c35",
     "menu.online": "Minecraft Realms",
     "menu.options": "\u9009\u9879\u2026",
     "menu.paused": "\u6e38\u620f\u5df2\u6682\u505c",
@@ -3346,44 +3346,44 @@
     "merchant.next_level": "\u5546\u4eba\u7684\u4e0b\u4e00\u7b49\u7ea7",
     "merchant.trades": "\u4ea4\u6613",
     "mount.onboard": "\u6309\u4e0b%1$s\u6765\u8131\u79bb",
-    "multiplayer.connect": "\u8fde\u63a5",
-    "multiplayer.disconnect.authservers_down": "\u8ba4\u8bc1\u670d\u52a1\u5668\u5904\u4e8e\u5b95\u673a\u72b6\u6001\u4e2d\u3002\u8bf7\u7a0d\u540e\u518d\u8bd5\uff0c\u62b1\u6b49\uff01",
-    "multiplayer.disconnect.banned": "\u4f60\u5df2\u88ab\u6b64\u670d\u52a1\u5668\u5c01\u7981",
-    "multiplayer.disconnect.banned.expiration": "\n\u4f60\u7684\u5c01\u7981\u5c06\u4e8e%s\u89e3\u9664",
-    "multiplayer.disconnect.banned.reason": "\u4f60\u88ab\u7248\u4e3b\u5c01\u7981\u4e86\uff01\n\u539f\u56e0: %s",
-    "multiplayer.disconnect.banned_ip.expiration": "\n\u4f60\u7684\u5c01\u7981\u5c06\u4e8e%s\u89e3\u9664",
+    "multiplayer.connect": "\u767b\u5f55",
+    "multiplayer.disconnect.authservers_down": "\u989d\uff0c\u8ba4\u8bc1\u7684\u670d\u52a1\u5668\u88ab\u5173\u4e86\uff1f\u6015\u4e0d\u662f\u53c8\u51fabug\u4e86\u3002",
+    "multiplayer.disconnect.banned": "\u4f60\u88ab\u7248\u4e3b\u6254\u8fdb\u672b\u5730\u5582\u9f99\u4e86\uff01",
+    "multiplayer.disconnect.banned.expiration": "\n\u4f60\u4f1a\u5728 %s \u5c60\u9f99\u5f52\u6765\u3002",
+    "multiplayer.disconnect.banned.reason": "\u4f60\u88ab\u7248\u4e3b\u6254\u8fdb\u672b\u5730\u5582\u9f99\u4e86\uff01\n\u539f\u56e0: %s",
+    "multiplayer.disconnect.banned_ip.expiration": "\n\u4f60\u4f1a\u5728 %s \u5c60\u9f99\u5f52\u6765\u3002",
     "multiplayer.disconnect.banned_ip.reason": "\u4f60\u7684IP\u88ab\u7248\u4e3b\u5c01\u7981\u4e86\uff01\n\u539f\u56e0: %s",
     "multiplayer.disconnect.duplicate_login": "\u4f60\u5df2\u5728\u5f02\u5730\u767b\u5f55",
-    "multiplayer.disconnect.flying": "\u6b64\u670d\u52a1\u5668\u672a\u542f\u7528\u98de\u884c",
-    "multiplayer.disconnect.generic": "\u8fde\u63a5\u4e2d\u6b62",
-    "multiplayer.disconnect.idling": "\u4f60\u7684\u672a\u64cd\u4f5c\u65f6\u95f4\u8fc7\u957f\uff01",
-    "multiplayer.disconnect.illegal_characters": "\u975e\u6cd5\u804a\u5929\u5b57\u7b26",
-    "multiplayer.disconnect.invalid_entity_attacked": "\u8bd5\u56fe\u653b\u51fb\u65e0\u6548\u5b9e\u4f53",
-    "multiplayer.disconnect.invalid_player_movement": "\u6536\u5230\u4e86\u5305\u542b\u975e\u6cd5\u73a9\u5bb6\u79fb\u52a8\u7684\u6570\u636e\u5305",
+    "multiplayer.disconnect.flying": "\u8fd9\u4e2a\u8336\u9986\u4e0d\u8bb8\u4f60\u98de\uff01\u4e0d\u7136\u628a\u8336\u9986\u649e\u4e2a\u5927\u6d1e\uff01",
+    "multiplayer.disconnect.generic": "\u963f\u52d2\uff0c\u4e0d\u77e5\u9053\u4e3a\u4ec0\u4e48\uff0c\u4f60\u548c\u8336\u9986\u7a81\u7136\u5931\u53bb\u4e86\u8fde\u63a5",
+    "multiplayer.disconnect.idling": "\u4f60\u592a\u4e45\u6ca1\u8bf4\u8bdd\u4e86\uff01\u4e3a\u9632\u6b62\u6d6a\u8d39\u8336\u9986\u8d44\u6e90\uff0c\u628a\u4f60\u6254\u51fa\u53bb\u3002",
+    "multiplayer.disconnect.illegal_characters": "\u4f60\u7528\u7684\u5b57\u7b26\u4e0d\u88ab\u8336\u9986\u63a5\u53d7\uff0c\u4f60\u6015\u4e0d\u662f\u7528\u4e86\u989c\u8272\u5b57\u7b26\uff1f",
+    "multiplayer.disconnect.invalid_entity_attacked": "\u4f60\u8bd5\u7740\u6253\u4e00\u4e2a\u4e0d\u5b58\u5728\u7684\u4e1c\u897f\uff0c\u6709\u70b9\u5f02\u5e38\u3002",
+    "multiplayer.disconnect.invalid_player_movement": "\u4f60\u6015\u4e0d\u662f\u5f00G\u4e86\uff1f\u79fb\u52a8\u90a3\u4e48\u5feb\uff1f\u6c35\u5e16\u8fd8\u8981\u5f00G\uff1f",
     "multiplayer.disconnect.invalid_vehicle_movement": "\u6536\u5230\u4e86\u5305\u542b\u975e\u6cd5\u8f7d\u5177\u79fb\u52a8\u7684\u6570\u636e\u5305",
-    "multiplayer.disconnect.ip_banned": "\u4f60\u7684IP\u5730\u5740\u5df2\u88ab\u6b64\u670d\u52a1\u5668\u5c01\u7981",
-    "multiplayer.disconnect.kicked": "\u88ab\u7ba1\u7406\u5458\u8e22\u51fa\u6e38\u620f",
-    "multiplayer.disconnect.name_taken": "\u6b64\u540d\u79f0\u5df2\u88ab\u5360\u7528",
-    "multiplayer.disconnect.not_whitelisted": "\u4f60\u672a\u88ab\u6b64\u670d\u52a1\u5668\u5217\u5165\u767d\u540d\u5355\uff01",
-    "multiplayer.disconnect.outdated_client": "\u5ba2\u6237\u7aef\u5df2\u8fc7\u671f\uff01\u8bf7\u4f7f\u7528%s",
-    "multiplayer.disconnect.outdated_server": "\u670d\u52a1\u5668\u5df2\u8fc7\u671f\uff01\u6211\u4ecd\u5728\u8fd0\u884c%s",
+    "multiplayer.disconnect.ip_banned": "\u4f60\u7684IP\u88ab\u7248\u4e3b\u6254\u53bb\u5582\u9f99\u4e86\uff01",
+    "multiplayer.disconnect.kicked": "\u7248\u4e3b\u628a\u4f60\u8e22\u51fa\u4e86\u8336\u9986\u3002\u4f3c\u4e4e\u662f\u770b\u4f60\u4e0d\u987a\u773c\uff1f",
+    "multiplayer.disconnect.name_taken": "\u4f60\u8fd9\u4e2a\u540d\u5b57\u88ab\u522b\u4eba\u7528\u4e86\u554a\uff01\u6362\u4e2a\u540d\u5b57\u5427\u3002",
+    "multiplayer.disconnect.not_whitelisted": "\u4e0d\u77e5\u9053\u53d1\u751f\u4e86\u4ec0\u4e48\uff0c\u8336\u9986\u5f00\u4e86\u767d\u540d\u5355\uff0c\u4f46\u4f60\u4e0d\u5728\u767d\u540d\u5355\u91cc\u3002",
+    "multiplayer.disconnect.outdated_client": "\u4f60\u7684\u5ba2\u6237\u7aef\u592a\u8001\u4e86\uff0c\u4e5f\u5f31\u7206\u4e86\uff01\u4f60\u5e94\u8be5\u7528 %s \u7248\u672c",
+    "multiplayer.disconnect.outdated_server": "\u8fd9\u4e2a\u8336\u9986\u592a\u8001\u4e86\uff0c\u4f60\u5728\u7528 %s \u7248\u7684\u8336\u9986\u5ba2\u6237\u7aef\u3002",
     "multiplayer.disconnect.server_full": "\u8fd9\u4e2a\u8336\u9986\u4f3c\u4e4e\u5f88\u53d7\u6b22\u8fce\uff01\u7a0d\u540e\u518d\u6765\u5427\uff01",
     "multiplayer.disconnect.server_shutdown": "\u8fd9\u4e2a\u8336\u9986\u5173\u95ed\u4e86\uff01\u4e5f\u8bb8\u5f85\u4f1a\u53c8\u4f1a\u5f00\uff1f",
-    "multiplayer.disconnect.slow_login": "\u767b\u5f55\u8d85\u65f6",
-    "multiplayer.disconnect.unexpected_query_response": "\u4ece\u5ba2\u6237\u7aef\u6536\u5230\u672a\u77e5\u7684\u81ea\u5b9a\u4e49\u6570\u636e",
-    "multiplayer.disconnect.unverified_username": "\u65e0\u6cd5\u9a8c\u8bc1\u7528\u6237\u540d\uff01",
-    "multiplayer.downloadingStats": "\u6b63\u5728\u4e0b\u8f7d\u7edf\u8ba1\u6570\u636e...",
-    "multiplayer.downloadingTerrain": "\u52a0\u8f7d\u5730\u5f62\u4e2d\u2026",
-    "multiplayer.ipinfo": "\u8f93\u5165\u670d\u52a1\u5668\u7684IP\u6765\u8fde\u63a5\uff1a",
-    "multiplayer.message_not_delivered": "\u804a\u5929\u6d88\u606f\u65e0\u6cd5\u53d1\u9001\uff0c\u8bf7\u68c0\u67e5\u670d\u52a1\u5668\u65e5\u5fd7\u3002\u622a\u65ad\u540e\u7684\u6d88\u606f\uff1a%s",
+    "multiplayer.disconnect.slow_login": "\u554a\u8fd9\uff0c\u767b\u5f55\u8d85\u65f6\u4e86\u3002",
+    "multiplayer.disconnect.unexpected_query_response": "\u4f60\u7ed9\u8336\u9986\u53d1\u4e86\u4e00\u4e2a\u81ea\u5b9a\u4e49\u6570\u636e\uff0c\u4f46\u662f\u8336\u9986\u4e0d\u77e5\u9053\u8fd9\u662f\u4ec0\u4e48\uff0c\u4f60\u88ab\u8e22\u4e86\u3002",
+    "multiplayer.disconnect.unverified_username": "\u4f60\u8fd9\u4e2a\u540d\u5b57\u6ca1\u6cd5\u9a8c\u8bc1\u554a\uff01\u8fdb\u4e0d\u4e86\u8336\u9986\u3002",
+    "multiplayer.downloadingStats": "\u6b63\u5728\u4e0b\u8f7d\u6c35\u5e16\u6570\u636e...",
+    "multiplayer.downloadingTerrain": "\u52a0\u8f7d\u8336\u9986\u4e2d\u2026",
+    "multiplayer.ipinfo": "\u8f93\u5165\u8336\u9986\u7684IP\u6765\u8fde\u63a5\uff1a",
+    "multiplayer.message_not_delivered": "\u8fd9\u4e2a\u4fe1\u606f\u53d1\u4e0d\u51fa\u53bb\uff0c\u8bf7\u68c0\u67e5\u8336\u9986\u65e5\u5fd7\u3002\u622a\u65ad\u540e\u7684\u6d88\u606f\uff1a %s",
     "multiplayer.player.joined": "%s \u6765\u5230\u4e86\u8336\u9986\uff0c\u5e94\u8be5\u662f\u6765\u6c35\u5e16\u7684\u3002",
-    "multiplayer.player.joined.renamed": "%s %28\u4ee5\u524d\u53eb %25s%29 \u6765\u5230\u4e86\u8336\u9986\u3002",
+    "multiplayer.player.joined.renamed": "%s %28\u4ee5\u524d\u53eb %s%29 \u6765\u5230\u4e86\u8336\u9986\u3002",
     "multiplayer.player.left": "%s \u79bb\u5f00\u4e86\u8336\u9986\uff0c\u662f\u88ab\u7248\u4e3b\u5c01\u7981\u4e86\u8fd8\u662f\u600e\u4e48\u4e86\uff1f",
-    "multiplayer.status.and_more": "\u2026\u53ca\u5176\u4ed6%s\u540d\u73a9\u5bb6\u2026",
+    "multiplayer.status.and_more": "\u2026\u53ca\u5176\u4ed6%s\u540d\u6c35\u602a\u2026",
     "multiplayer.status.cancelled": "\u5df2\u53d6\u6d88",
-    "multiplayer.status.cannot_connect": "\u65e0\u6cd5\u8fde\u63a5\u5230\u670d\u52a1\u5668",
-    "multiplayer.status.cannot_resolve": "\u65e0\u6cd5\u89e3\u6790\u4e3b\u673a\u540d",
-    "multiplayer.status.client_out_of_date": "\u5ba2\u6237\u7aef\u5df2\u8fc7\u671f\uff01",
+    "multiplayer.status.cannot_connect": "\u65e0\u6cd5\u8fde\u63a5\u5230\u8336\u9986",
+    "multiplayer.status.cannot_resolve": "\u65e0\u6cd5\u89e3\u6790\u8336\u9986\u7684\u4e3b\u673a\u540d",
+    "multiplayer.status.client_out_of_date": "\u5ba2\u6237\u7aef\u592a\u8001\u4e86\uff01",
     "multiplayer.status.finished": "\u5df2\u5b8c\u6210",
     "multiplayer.status.no_connection": "\uff08\u65e0\u8fde\u63a5\uff09",
     "multiplayer.status.old": "\u65e7\u7248",
@@ -3398,8 +3398,8 @@
     "multiplayer.texturePrompt.line2": "\u4f60\u60f3\u8981\u81ea\u52a8\u4e0b\u8f7d\u548c\u5b89\u88c5\u5b83\u5417\uff1f",
     "multiplayer.title": "\u591a\u4eba\u6e38\u620f",
     "multiplayerWarning.check": "\u4e0d\u518d\u663e\u793a\u6b64\u754c\u9762",
-    "multiplayerWarning.header": "\u5728\u7ebf\u6e38\u620f\u672a\u5206\u7ea7",
-    "multiplayerWarning.message": "\u5728\u591a\u4eba\u6e38\u620f\u4e2d\uff0c\u60a8\u53ef\u80fd\u63a5\u89e6\u5230\u672a\u5206\u7ea7\u548c\u4e0d\u9002\u5408\u5168\u5e74\u9f84\u7684\u804a\u5929\u4fe1\u606f\uff0c\u6216\u7528\u6237\u4ea7\u751f\u7684\u5176\u4ed6\u7c7b\u578b\u7684\u4fe1\u606f\u3002",
+    "multiplayerWarning.header": "\u591a\u4eba\u6c35\u5e16\u6216\u8bb8\u4e0d\u5b89\u5168\uff1f",
+    "multiplayerWarning.message": "\u5728\u8336\u9986\u4e2d\uff0c\u60a8\u53ef\u80fd\u63a5\u89e6\u5230\u53e3\u5410\u82ac\u82b3\u7684\u4fe1\u606f\u8fd8\u6709\u4e00\u4e9b\u5947\u602a\u7684\u4e1c\u897f\u3002",
     "narration.suggestion": "\u9009\u4e2d\u4e86%2$s\u9879\u5efa\u8bae\u4e2d\u7684\u7b2c%1$s\u9879\uff1a%s",
     "narration.suggestion.tooltip": "\u9009\u4e2d\u4e86%2$s\u9879\u5efa\u8bae\u4e2d\u7684\u7b2c%1$s\u9879\uff1a%s\uff08%s\uff09",
     "narrator.button.accessibility": "\u8f85\u52a9\u529f\u80fd",
