--- a/assets/minecraft/lang/zh_mcbbs.json
+++ b/assets/minecraft/lang/zh_mcbbs.json
@@ -19,7 +19,6 @@
   "selectServer.deleteQuestion":"\u4f60\u786e\u5b9a\u8981\u5220\u9664\u6b64\u591a\u4eba\u8336\u9986\u5417\uff1f",
   "selectServer.select":"\u52a0\u5165\u591a\u4eba\u8336\u9986",
   "selectServer.title":"\u9009\u62e9\u591a\u4eba\u8336\u9986",
-  "selectWorld.backupQuestion":"\u4f60\u771f\u7684\u60f3\u52a0\u8f7d\u6b64\u8336\u9986\u5417\uff1f",
   "selectWorld.access_failure":"\u8bbf\u95ee\u8336\u9986\u5931\u8d25",
   "selectWorld.allowCommands":"\u5141\u8bb8\u6ee5\u6743",
   "selectWorld.allowCommands.info":"\u4f8b\u5982\u002f\u0065\u0078\u0070\u0065\u0072\u0069\u0065\u006e\u0063\u0065\u3001\u002f\u0062\u0061\u006e\u7b49\u547d\u4ee4",
@@ -38,11 +37,10 @@
   "selectWorld.createDemo": "\u8fdb\u5165\u65b0\u7684\u8bd5\u73a9\u8336\u9986",
   "selectWorld.customizeType": "\u81ea\u5b9a\u4e49",
   "selectWorld.dataPacks": "\u6570\u636e\u5305",
-
-  "selectWorld.data_read": "\u6b63\u5728\u8bfb\u53d6\u8336\u9986\u6570\u636\u2026\u2026",
+  "selectWorld.data_read": "\u6b63\u5728\u8bfb\u53d6\u8336\u9986\u6570\u636e\u2026\u2026",
   "selectWorld.delete": "\u5220\u9664",
   "selectWorld.deleteButton": "\u5220\u9664",
-  "selectWorld.deleteQuestion": "\u4f60\u786e\u5b9a\u8981\u5220\u9664\u8fd9\u4e2\u8336\u9986\u5417\uff1f",
+  "selectWorld.deleteQuestion": "\u4f60\u786e\u5b9a\u8981\u5220\u9664\u8fd9\u4e2a\u8336\u9986\u5417\uff1f",
   "selectWorld.deleteWarning": "\u201c%s\u201d\u5c06\u4f1a\u6c38\u4e45\u5931\u53bb\uff01\uff08\u771f\u7684\u5f88\u4e45\uff01\uff09",
   "selectWorld.delete_failure": "\u5220\u9664\u8336\u9986\u5931\u8d25",
   "selectWorld.edit": "\u7f16\u8f91",
@@ -51,125 +49,68 @@
   "selectWorld.edit.backupFailed": "\u5907\u4efd\u5931\u8d25",
   "selectWorld.edit.backupFolder": "\u6253\u5f00\u5907\u4efd\u6587\u4ef6\u5939",
   "selectWorld.edit.backupSize": "\u5927\u5c0f\uff1a%s MB",
-
   "selectWorld.edit.export_worldgen_settings": "\u5bfc\u51fa\u8336\u9986\u751f\u6210\u8bbe\u7f6e",
   "selectWorld.edit.export_worldgen_settings.failure": "\u5bfc\u51fa\u5931\u8d25",
   "selectWorld.edit.export_worldgen_settings.success": "\u5bfc\u51fa\u6210\u529f",
   "selectWorld.edit.openFolder": "\u6253\u5f00\u8336\u9986\u6587\u4ef6\u5939",
   "selectWorld.edit.optimize": "\u4f18\u5316\u8336\u9986",
   "selectWorld.edit.resetIcon": "\u91cd\u7f6e\u56fe\u6807",
-
   "selectWorld.edit.save": "\u4fdd\u5b58",
   "selectWorld.edit.title": "\u7f16\u8f91\u8336\u9986",
   "selectWorld.enterName": "\u8336\u9986\u540d\u79f0",
-
   "selectWorld.enterSeed": "\u8336\u9986\u751f\u6210\u5668\u7684\u79cd\u5b50",
-
   "selectWorld.futureworld.error.text": "\u5f53\u6211\u4eec\u8bd5\u56fe\u52a0\u8f7d\u4e00\u4efd\u6765\u81ea\u672a\u6765\u7248\u672c\u7684\u8336\u9986\u65f6\uff0c\u53d1\u751f\u4e86\u4e00\u4e9b\u9519\u8bef\u3002\u8fd9\u672c\u5c31\u5e76\u975e\u4e07\u65e0\u4e00\u5931\uff0c\u5f88\u62b1\u6b49\u6ca1\u80fd\u6210\u529f\u3002",
-
   "selectWorld.futureworld.error.title": "\u51fa\u9519\u4e86\uff01",
-
   "selectWorld.gameMode": "\u6e38\u620f\u6a21\u5f0f",
-
   "selectWorld.gameMode.adventure": "\u5192\u9669",
-
   "selectWorld.gameMode.adventure.line1": "\u4e0e\u751f\u5b58\u6a21\u5f0f\u76f8\u540c\uff0c\u4f46\u662f\u65b9\u5757",
-
   "selectWorld.gameMode.adventure.line2": "\u4e0d\u80fd\u88ab\u6dfb\u52a0\u6216\u8005\u79fb\u9664",
-
   "selectWorld.gameMode.creative": "\u4e0a\u5e1d",
-
   "selectWorld.gameMode.creative.line1": "\u65e0\u9650\u7684\u91d1\u7c92\uff0c\u7eff\u5b9d\u77f3\u548c\u4eba\u6c14\uff01",
-
   "selectWorld.gameMode.creative.line2": "\u5e76\u4e14\u53ef\u4ee5\u65e0\u62d8\u65e0\u675f\uff01",
-
   "selectWorld.gameMode.hardcore": "\u6781\u9650",
-
   "selectWorld.gameMode.hardcore.line1": "\u96be\u5ea6\u9501\u5b9a\u5728\u56f0\u96be\u7684\u751f\u5b58\u6a21\u5f0f",
-
   "selectWorld.gameMode.hardcore.line2": "\u4e14\u53ea\u6709\u4e00\u6761\u751f\u547d",
-
   "selectWorld.gameMode.spectator": "\u65c1\u89c2",
-
   "selectWorld.gameMode.spectator.line1": "\u4f60\u53ef\u4ee5\u65c1\u89c2\uff0c\u4f46\u4e0d\u80fd\u4e92\u52a8",
-
   "selectWorld.gameMode.survival": "\u751f\u5b58",
-
   "selectWorld.gameMode.survival.line1": "\u63a2\u7d22\u8336\u9986\u3001\u6536\u96c6\u8d44\u6e90\u3001\u5408\u6210\u9053\u5177\u3001",
-
   "selectWorld.gameMode.survival.line2": "\u63d0\u9ad8\u7b49\u7ea7\u3001\u8865\u5145\u4f53\u529b\u548c\u751f\u547d\u503c",
-
   "selectWorld.gameRules": "\u8336\u9986\u89c4\u5219",
-
   "selectWorld.newWorld":"\u65b0\u7684\u8336\u9986",
   "selectWorld.import_worldgen_settings": "\u5bfc\u5165\u8bbe\u7f6e",
-
   "selectWorld.import_worldgen_settings.deprecated.question": "\u4e00\u4e9b\u4f7f\u7528\u4e2d\u7684\u529f\u80fd\u5df2\u88ab\u6dd8\u6c70\u5e76\u4f1a\u5728\u5c06\u6765\u5931\u6548\u3002\u4f60\u786e\u5b9a\u8981\u7ee7\u7eed\u5417\uff1f",
-
   "selectWorld.import_worldgen_settings.deprecated.title": "\u8b66\u544a\uff01\u8fd9\u4e9b\u8bbe\u7f6e\u4f7f\u7528\u4e86\u5df2\u6dd8\u6c70\u7684\u529f\u80fd",
-
   "selectWorld.import_worldgen_settings.experimental.question": "\u8fd9\u4e9b\u8bbe\u7f6e\u662f\u5b9e\u9a8c\u6027\u7684\uff0c\u5c06\u6765\u53ef\u80fd\u505c\u6b62\u8fd0\u4f5c\u3002\u4f60\u786e\u5b9a\u8981\u7ee7\u7eed\u5417\uff1f",
   "selectWorld.import_worldgen_settings.experimental.title": "\u8b66\u544a\uff01\u8fd9\u4e9b\u8bbe\u7f6e\u4f7f\u7528\u5b9e\u9a8c\u6027\u529f\u80fd",
-
   "selectWorld.import_worldgen_settings.failure": "\u5bfc\u5165\u8bbe\u7f6e\u65f6\u51fa\u9519",
-
   "selectWorld.import_worldgen_settings.select_file": "\u9009\u62e9\u8bbe\u7f6e\u6587\u4ef6\uff08.json\uff09",
-
   "selectWorld.load_folder_access": "\u65e0\u6cd5\u8bfb\u53d6\u6216\u8bbf\u95ee\u6e38\u620f\u8336\u9986\u5b58\u6863\u6240\u5728\u7684\u6587\u4ef6\u5939\uff01",
-
   "selectWorld.locked": "\u88ab\u53e6\u4e00\u4e2a\u6b63\u5728\u8fd0\u884c\u7684Minecraft\u5b9e\u4f8b\u9501\u5b9a",
-
   "selectWorld.mapFeatures": "\u751f\u6210\u5efa\u7b51",
-
   "selectWorld.mapFeatures.info": "\u6751\u5e84\u3001\u5730\u7262\u7b49\u7b49",
-
   "selectWorld.mapType": "\u8336\u9986\u7c7b\u578b\uff1a",
-
   "selectWorld.mapType.normal": "\u666e\u901a",
   "selectWorld.moreWorldOptions": "\u66f4\u591a\u8336\u9986\u7684\u9009\u9879\u2026",
-
-  "selectWorld.newWorld": "\u65b0\u7684\u8336\u9986",
-
   "selectWorld.recreate": "\u91cd\u5efa",
-
   "selectWorld.recreate.customized.text": "\u81ea\u5b9a\u4e49\u8336\u9986\u5728\u8fd9\u4e2a\u7248\u672c\u7684Minecraft\u4e2d\u5df2\u4e0d\u53d7\u652f\u6301\u3002\u6211\u4eec\u53ef\u4ee5\u5c1d\u8bd5\u7528\u540c\u6837\u7684\u79cd\u5b50\u4e0e\u9009\u9879\u91cd\u5efa\u5b83\uff0c\u4f46\u4efb\u4f55\u81ea\u5b9a\u4e49\u7684\u5730\u5f62\u90fd\u4f1a\u4e22\u5931\u3002\u62b1\u6b49\u7ed9\u60a8\u5e26\u6765\u4e0d\u4fbf\u3002",
-
   "selectWorld.recreate.customized.title": "\u81ea\u5b9a\u4e49\u8336\u9986\u5df2\u4e0d\u53d7\u652f\u6301",
-
   "selectWorld.recreate.error.text": "\u5c1d\u8bd5\u91cd\u5efa\u8336\u9986\u65f6\u51fa\u9519\u3002",
-
   "selectWorld.recreate.error.title": "\u51fa\u9519\u4e86\uff01",
-
   "selectWorld.resultFolder": "\u5c06\u4f1a\u4fdd\u5b58\u4e8e\uff1a",
-
   "selectWorld.search": "\u641c\u7d22\u8336\u9986",
-
   "selectWorld.seedInfo": "\u7559\u7a7a\u4ee5\u751f\u6210\u968f\u673a\u79cd\u5b50",
-
   "selectWorld.select": "\u8fdb\u5165\u9009\u4e2d\u7684\u8336\u9986",
-
   "selectWorld.title": "\u9009\u62e9\u8336\u9986",
-
   "selectWorld.tooltip.fromNewerVersion1": "\u8336\u9986\u662f\u5728\u66f4\u65b0\u7684\u7248\u672c\u4e2d\u88ab\u4fdd\u5b58\u7684\uff0c",
-
   "selectWorld.tooltip.fromNewerVersion2": "\u52a0\u8f7d\u8fd9\u4e2a\u8336\u9986\u53ef\u80fd\u4f1a\u4ea7\u751f\u95ee\u9898\uff01",
-
   "selectWorld.tooltip.snapshot1": "\u4f60\u5728\u8fd9\u4e2a\u5feb\u7167\u4e2d\u52a0\u8f7d\u5b83\u4e4b\u524d\uff0c",
-
   "selectWorld.tooltip.snapshot2": "\u4e0d\u8981\u5fd8\u4e86\u5907\u4efd\u8fd9\u4e2a\u8336\u9986\uff01",
-
   "selectWorld.unable_to_load": "\u65e0\u6cd5\u52a0\u8f7d\u8336\u9986",
-
   "selectWorld.version": "\u7248\u672c\uff1a",
-
   "selectWorld.versionJoinButton": "\u4ecd\u7136\u8f7d\u5165",
-
   "selectWorld.versionQuestion": "\u4f60\u771f\u7684\u60f3\u52a0\u8f7d\u6b64\u8336\u9986\u5417\uff1f",
-
   "selectWorld.versionUnknown": "\u672a\u77e5",
-
   "selectWorld.versionWarning": "\u6b64\u8336\u9986\u4e0a\u6b21\u662f\u5728%s\u7248\u672c\u4e2d\u6e38\u73a9\u7684\uff0c\u5728\u6b64\u7248\u672c\u4e2d\u52a0\u8f7d\u53ef\u80fd\u4f1a\u5bfc\u81f4\u6570\u636e\u635f\u574f\uff01",
-
-  "selectWorld.world": "\u8336\u9986",
-
+  "selectWorld.world": "\u8336\u9986"
 }
